--- a/spring-boot-frontend/pom.xml
+++ b/spring-boot-frontend/pom.xml
@@ -43,6 +43,11 @@
             <artifactId>bootstrap</artifactId>
             <version>5.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.6.4</version>
+        </dependency>
 
         <dependency>
             <groupId>io.micrometer</groupId>
