--- a/nodejs-express/package.json
+++ b/nodejs-express/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
-    "consolidate": "^0.16.0",
     "express": "^4.18.2",
-    "mustache": "^4.2.0"
+    "jquery": "^3.7.0",
+    "mustache": "^4.2.0",
+    "mustache-express": "^1.3.2"
   }
 }
