--- a/nodejs-express/config/workload.yaml
+++ b/nodejs-express/config/workload.yaml
@@ -1,11 +1,11 @@
 apiVersion: carto.run/v1alpha1
 kind: Workload
 metadata:
-  name: myapp
+  name: nodejs-express
   labels:
     apps.tanzu.vmware.com/workload-type: web
     apps.tanzu.vmware.com/has-tests: "true"
-    app.kubernetes.io/part-of: myapp
+    app.kubernetes.io/part-of: nodejs-express
 spec:
   source:
     git:
