--- a/nodejs-express/accelerator.yaml
+++ b/nodejs-express/accelerator.yaml
@@ -14,6 +14,10 @@ accelerator:
     dataType: boolean
     defaultValue: false
   imports:
+  - name: live-update
+    expose:
+    - name: liveUpdateIDESupport
+    - name: sourceRepositoryPrefix
   - name: tap-workload
 
 engine:
@@ -48,3 +52,14 @@ engine:
       reference: tap-workload
     - include: [ "**" ]
       onConflict: UseFirst
+
+  - condition: "#enableOtel == true"
+    merge:
+    - include: [ "**" ]
+      exclude: [ "server.js" ]
+    - include: [ "server.js" ]
+      chain:
+      - type: ReplaceText
+        substitutions:
+        - text: "const otelEnabled = false"
+          with: "'const otelEnabled = true'"
