--- a/spring-boot-frontend/config/workload.yaml
+++ b/spring-boot-frontend/config/workload.yaml
@@ -16,3 +16,11 @@ spec:
     env:
     - name: BP_JVM_VERSION
       value: "17"
+  params:
+  - name: annotations
+    value:
+      autoscaling.knative.dev/minScale: "0"
+  - name: testing_pipeline_matching_labels
+    value:
+      apps.tanzu.vmware.com/pipeline: test
+      apps.tanzu.vmware.com/language: java
