--- a/spring-boot-frontend/config/workload.yaml
+++ b/spring-boot-frontend/config/workload.yaml
@@ -1,11 +1,11 @@
 apiVersion: carto.run/v1alpha1
 kind: Workload
 metadata:
-  name: myapp
+  name: spring-boot-frontend
   labels:
     apps.tanzu.vmware.com/workload-type: web
     apps.tanzu.vmware.com/has-tests: "true"
-    app.kubernetes.io/part-of: myapp
+    app.kubernetes.io/part-of: spring-boot-frontend
 spec:
   source:
     git:
