Exclude metrics components when OpenTelemetry is disabled

--- a/java-spring-boot/accelerator.yaml
+++ b/java-spring-boot/accelerator.yaml
@@ -305,7 +305,7 @@ engine:
   - condition: "#includeOtel == false"
     merge:
     - include: [ "**" ]
-      exclude: [ "pom.xml" ]
+      exclude: [ "pom.xml", "**/InfoMetrics.java" ]
     - include: [ "pom.xml" ]
       chain:
       - type: OpenRewriteRecipe
