--- a/java-spring-boot/config/workload-native.yaml
+++ b/java-spring-boot/config/workload-native.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     apps.tanzu.vmware.com/workload-type: web
     apps.tanzu.vmware.com/has-tests: 'true'
+    apis.apps.tanzu.vmware.com/register-api: 'true'
     app.kubernetes.io/part-of: java-spring-boot
 spec:
   source:
