--- a/java-spring-boot/src/main/resources/application.yaml
+++ b/java-spring-boot/src/main/resources/application.yaml
@@ -45,6 +45,8 @@ server:
   port: ${PORT:8080}
 
 app:
+  info:
+    running-in-kubernetes: false
   hello:
     greetings: Hello %s!
   github:
@@ -52,3 +54,14 @@ app:
     repo: spring-boot
     api:
       url: https://api.github.com
+
+---
+
+spring:
+  config:
+    activate:
+      on-cloud-platform: kubernetes
+
+app:
+  info:
+    running-in-kubernetes: true
